@@ -1,3 +1,6 @@
+Fri Dec  5 18:43:47 MET 1997
+        * hannes: fix to ideals.cc: avoid pGetExp(p,0)
+
 Thu Dec  4 16:13:31 MEZ 1997 Kai Krueger <krueger@mathematik.uni-kl.de>
 	* ndbm.cc: don't replace bcopy by memcpy if possible, otherwise
 	  the database (>1024 bytes) will be corrupted.
